--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,12 +22,13 @@
 		"prettier/prettier": [
 			"warn",
 			{
-				"semi": true,
+				"semi": false,
 				"trailingComma": "all",
-				"singleQuote": false,
+				"singleQuote": true,
 				"printWidth": 120,
 				"tabWidth": 4,
-				"useTabs": true
+				"useTabs": false,
+				"endOfLine": "auto"
 			}
 		]
 	}
