--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "@rbxts/octree",
 	"version": "1.0.0",
 	"description": "A Typescript port of Nevermore's Octree module",
-	"main": "out/init.lua",
+	"main": "src/init.lua",
 	"scripts": {
 		"prepublishOnly": "rbxtsc"
 	},
@@ -12,7 +12,7 @@
 	"publishConfig": {
 		"access": "public"
 	},
-	"types": "out/index.d.ts",
+	"types": "src/index.d.ts",
 	"devDependencies": {
 		"@rbxts/compiler-types": "^1.0.0-beta.13.1",
 		"@rbxts/types": "^1.0.437",
