--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
-	"name": "@rbxts/octree",
-	"version": "1.0.1",
-	"description": "A Typescript port of Nevermore's Octree module",
-	"main": "src/init.lua",
-	"scripts": {
-		"prepublishOnly": "rbxtsc"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "MIT",
-	"publishConfig": {
-		"access": "public"
-	},
-	"types": "src/index.d.ts",
-	"devDependencies": {
-		"@rbxts/compiler-types": "^1.0.0-beta.13.1",
-		"@rbxts/types": "^1.0.437",
-		"@typescript-eslint/eslint-plugin": "^4.12.0",
-		"@typescript-eslint/parser": "^4.12.0",
-		"eslint": "^7.17.0",
-		"eslint-config-prettier": "^7.1.0",
-		"eslint-plugin-prettier": "^3.3.1",
-		"eslint-plugin-roblox-ts": "0.0.24",
-		"prettier": "^2.2.1",
-		"typescript": "^4.1.3"
-	}
+  "name": "@rbxts/octree",
+  "version": "1.0.1-ts.2",
+  "description": "A Typescript port of Nevermore's Octree module",
+  "repository": "github:grilme99/OctreeTS",
+  "main": "src/init.lua",
+  "keywords": [
+    "roblox-ts",
+    "roblox",
+    "nevermore",
+    "octree"
+  ],
+  "author": "",
+  "license": "MIT",
+  "publishConfig": {
+    "access": "public"
+  },
+  "types": "src/index.d.ts",
+  "devDependencies": {
+    "@rbxts/compiler-types": "^1.3.3-types.1",
+    "@rbxts/types": "^1.0.590",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "eslint": "^7.17.0",
+    "eslint-config-prettier": "^7.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-roblox-ts": "0.0.24",
+    "prettier": "^2.2.1",
+    "typescript": "^4.1.3"
+  }
 }
